log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 05:59:32 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:15: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 |   lista->data=*array[0];
      |               ^~~~~~~~~
Compilation failed
70205da
Thu 30 Mar 2023 05:59:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:14: error: assignment to ‘void **’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   17 |   lista->data=array[0];
      |              ^
arraylist.c:17:20: error: ‘*array’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->data=array[0];
      |               ~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e10a2b1
Thu 30 Mar 2023 06:01:10 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
b6fefed
Thu 30 Mar 2023 06:07:28 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c155366
Thu 30 Mar 2023 06:08:04 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:15: error: incompatible types when assigning to type ‘void **’ from type ‘ArrayList’ {aka ‘struct ArrayList’}
   16 |   lista->data=*lista;
      |               ^
Compilation failed
84494d0
Thu 30 Mar 2023 06:08:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d3a158f
Thu 30 Mar 2023 06:09:14 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
977b055
Thu 30 Mar 2023 06:09:33 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
0ea860c
Thu 30 Mar 2023 06:11:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ef9b50
Thu 30 Mar 2023 06:12:56 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
65fda94
Thu 30 Mar 2023 06:13:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c4d7727
Thu 30 Mar 2023 06:13:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5ed358f
Thu 30 Mar 2023 06:15:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:9: error: invalid type argument of ‘->’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   24 |   l[l[0]->size]->data=data;
      |         ^~
Compilation failed
c7e5602
Thu 30 Mar 2023 06:16:11 PM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3d4a918
Thu 30 Mar 2023 06:17:57 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:15: error: invalid type argument of ‘->’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   24 |   l[l[0].size]->data=data;
      |               ^~
Compilation failed
49bd48d
Thu 30 Mar 2023 06:18:15 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
794f462
Thu 30 Mar 2023 08:23:54 PM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
f3784f5
Thu 30 Mar 2023 08:25:59 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
9653dfd
Thu 30 Mar 2023 08:29:56 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
29f4809
Thu 30 Mar 2023 08:31:15 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a0ba6d3
Thu 30 Mar 2023 08:33:03 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:14: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList *’ {aka ‘struct ArrayList *’} [-Werror=incompatible-pointer-types]
   31 |       l->data=(ArrayList*)realloc(l->data,l->capacity*2);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
e36eb4f
Thu 30 Mar 2023 08:33:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d125f92
Thu 30 Mar 2023 08:33:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f36c93
Thu 30 Mar 2023 08:35:48 PM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:35: error: ‘capacity’ undeclared (first use in this function)
   30 |       l->data=(void*)realloc(data,capacity*2);
      |                                   ^~~~~~~~
arraylist.c:30:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d6205c6
Thu 30 Mar 2023 08:36:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a8e1de
Thu 30 Mar 2023 08:36:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39a5b8d
Thu 30 Mar 2023 08:36:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f2f4ee
Thu 30 Mar 2023 08:37:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:25: error: dereferencing ‘void *’ pointer [-Werror]
   33 |     l->data[l->size -1]=*data;
      |                         ^~~~~
arraylist.c:33:24: error: void value not ignored as it ought to be
   33 |     l->data[l->size -1]=*data;
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
b00ea05
Thu 30 Mar 2023 09:50:57 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8a0cd3f
Thu 30 Mar 2023 09:51:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a73ee04
